test/Fail/Issue892b.err
Issue892b.agda:10.7-10: error: [UnequalTerms]
(r : R) → r .R.A → Set should be a sort, but it isn't
when checking that the expression R.B has type _1
